--- a/playbooks/setup-openstack.yml
+++ b/playbooks/setup-openstack.yml
@@ -37,6 +37,7 @@
 - include: os-magnum-install.yml
 - include: os-trove-install.yml
 - include: os-sahara-install.yml
+- include: os-cloudkitty-install.yml
 - include: os-molteniron-install.yml
 - include: os-octavia-install.yml
 - include: os-tempest-install.yml
