intgreate redis role

--- a/ansible-role-requirements.yml
+++ b/ansible-role-requirements.yml
@@ -206,3 +206,7 @@
   scm: git
   src: https://github.com/b3lab/openstack-ansible-os_cloudkitty.git
   version: stable/pike
+- name: os_redis
+  scm: git
+  src: https://github.com/gokhan27/openstack-ansible-os_redis.git
+  version: master
