--- a/playbooks/os-redis-install.yml
+++ b/playbooks/os-redis-install.yml
@@ -48,7 +48,7 @@
     - role: "os_redis"
   vars:
     is_metal: "{{ properties.is_metal|default(false) }}"
-    redis_slaveof: " redis master ip {{ redis_port }}"
+    redis_slaveof: " {{ redis_master_cluster_node }} {{ redis_port }}"
   environment: "{{ deployment_environment_variables | default({}) }}"
   tags:
     - redis-slave
